--- a/StarGuapa/Views/Shared/_Layout.cshtml
+++ b/StarGuapa/Views/Shared/_Layout.cshtml
@@ -16,10 +16,8 @@
 </head>
 <body>
     <header>
-
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <div class="container">
-                
+            <div class="container">    
                 <a class="navbar-brand" asp-area="Client" asp-controller="Home" asp-action="Index"><img src="~/imagenes/logos/SmallLetras.png" /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -27,13 +25,13 @@
 
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav mr-auto">
+                        @await Component.InvokeAsync("CategoryMenu")
                         @if (User.IsInRole(StarGuapa.Utilities.CNT.Administrador))
                         {
                             <li class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle text-white" id="navbarDropDown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Contenidos
                                 </a>
-
                                 <div class="dropdown-menu" aria-labelledby="navbarDropDown">
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="Categorias" asp-action="Index">Categorias</a>
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="Articulos" asp-action="Index">Articulos</a>
