--- a/StarGuapa/wwwroot/css/site.css
+++ b/StarGuapa/wwwroot/css/site.css
@@ -77,3 +77,26 @@ body {
     background: url('../imagenes/Prueba.png');
     padding: 40px 0 40px 0; 
 }
+
+
+.caption {
+    height: 130px;
+    overflow: hidden;
+}
+
+.caption h4 {
+        white-space: nowrap;
+}
+
+.thumbnail img {
+    width: 100%;
+}
+
+.addToCart {
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+.thumbnail {
+    padding: 0;
+}
